fix spelling error

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 </span>
                                 <span class="author-block">
                                     <a href="https://scholar.google.com/citations?user=AkEXTbIAAAAJ&hl=en"
-                                        target="_blank">Vishal Patel</a>
+                                        target="_blank">Vishal M. Patel</a>
                                 </span>
                             </div>
                         </div>
@@ -272,7 +272,8 @@ Coming soon ...
                 <div class="container is-max-desktop content">
                     <h5 class="title" style="font-size: 10px;"> Acknowledgement: The website template is taken from
                         <span class="author-block">
-                            <a href="https://nerfies.github.io/" target="_blank">Nerfies</a></h5>
+                            <a href="https://nerfies.github.io/" target="_blank">Nerfies</a>
+                    </h5>
 
                 </div>
             </section>
