--- a/index.html
+++ b/index.html
@@ -139,6 +139,13 @@
                     <img src="./static/images/intro_viz.png" alt="" border="0" height="600" width="1500">
                     <img src="./static/images/intro.png" alt="" style="border:0; height:500px; width:1500px;">
                     <div class="content has-text-justified">
+                        <p>Comparison with representative methods under different task settings.
+                            <i>FaceXformer</i>
+                            can perform various facial analysis tasks in single model. FP
+                            - Face Parsing, LD - Landmarks Detection, HPE - Head Pose Estimation, Attr - At-
+                            tributes Recognition, Age - Age Estimatin, Gen - Gender Estimation, Race - Race
+                            Estimation, Vis - Landmarks Visibility Prediction, MD - Multi-dataset Training
+                        </p>
                         <ul>
                             <li>
                                 In recent years, significant advancements have been made in facial analysis, developing
@@ -211,12 +218,7 @@
                                 <img src="./static/images/quantitative_results.png" alt="" border=0 height=500
                                     width=1500></img></ </div>
                                 <p>
-                                    Comparison with representative methods under different task settings.
-                                    <i>FaceXformer</i>
-                                    can perform various facial analysis tasks in single model. FP
-                                    - Face Parsing, LD - Landmarks Detection, HPE - Head Pose Estimation, Attr - At-
-                                    tributes Recognition, Age - Age Estimatin, Gen - Gender Estimation, Race - Race
-                                    Estimation, Vis - Landmarks Visibility Prediction, MD - Multi-dataset Training
+                                    Comparison with specialized models and existing multi-task networks.
                                 </p>
                             </div>
                         </div>
