--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                                     </a>
                                 </span>
                                 <span class="link-block">
-                                    <a href="" class="external-link button is-normal is-rounded is-dark">
+                                    <a href="https://github.com/Kartik-3004/facexformer"
+                                        class="external-link button is-normal is-rounded is-dark">
                                         <span class="icon">
                                             <i class="fab fa-github"></i>
                                         </span>
