--- a/index.html
+++ b/index.html
@@ -259,15 +259,14 @@
                 <div class="container content is-max-desktop">
                     <h2 class="title">BibTeX</h2>
                     <pre><code>
-Coming soon ...
-  <!-- @InProceedings{Narayan_2023_CVPR,
-    author    = {Narayan, Kartik and Agarwal, Harsh and Thakral, Kartik and Mittal, Surbhi and Vatsa, Mayank and Singh, Richa},
-    title     = {DF-Platter: Multi-Face Heterogeneous Deepfake Dataset},
-    booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-    month     = {June},
-    year      = {2023},
-    pages     = {9739-9748}
-} -->
+@misc{narayan2024facexformer,
+title={FaceXFormer : A Unified Transformer for Facial Analysis},
+author={Kartik Narayan and Vibashan VS and Rama Chellappa and Vishal M. Patel},
+year={2024},
+eprint={2403.12960},
+archivePrefix={arXiv},
+primaryClass={cs.CV}
+}
 </code></pre>
                 </div>
             </section>
