--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@
             <section class="section" id="BibTeX">
                 <div class="container content is-max-desktop">
                     <h2 class="title">BibTeX</h2>
-                    <pre><code>
-@misc{narayan2024facexformer,
+                    <pre><code>@misc{narayan2024facexformer,
       title={FaceXFormer : A Unified Transformer for Facial Analysis},
       author={Kartik Narayan and Vibashan VS and Rama Chellappa and Vishal M. Patel},
       year={2024},
