--- a/index.html
+++ b/index.html
@@ -258,12 +258,13 @@
             <section class="section" id="BibTeX">
                 <div class="container content is-max-desktop">
                     <h2 class="title">BibTeX</h2>
-                    <pre><code>@article{narayan2024facexformer,
-                    title={FaceXFormer: A Unified Transformer for Facial Analysis},
-                    author={Narayan, Kartik and VS, Vibashan and Chellappa, Rama and Patel, Vishal M},
-                    journal={arXiv preprint arXiv:2403.12960},
-                    year={2024}
-                    }
+                    <pre><code>
+@article{narayan2024facexformer,
+    title={FaceXFormer: A Unified Transformer for Facial Analysis},
+    author={Narayan, Kartik and VS, Vibashan and Chellappa, Rama and Patel, Vishal M},
+    journal={arXiv preprint arXiv:2403.12960},
+    year={2024}
+}
 </code></pre>
                 </div>
             </section>
